--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "pnpm run build:web",
+  "buildCommand": "npm run build:web",
   "outputDirectory": "dist",
   "framework": "vite"
 }
